Remove not used imports